[gd_scene load_steps=29 format=2]

[ext_resource path="res://startscreenscroll.gd" type="Script" id=1]
[ext_resource path="res://f1buttons/f1redbutton.png" type="Texture" id=2]
[ext_resource path="res://f1buttons/f1yellowbutton.png" type="Texture" id=3]
[ext_resource path="res://f1buttons/f1orangeclicked.png" type="Texture" id=4]
[ext_resource path="res://f1buttons/f1yellowclicked.png" type="Texture" id=5]
[ext_resource path="res://f1buttons/f1bluebutton.png" type="Texture" id=6]
[ext_resource path="res://f1buttons/f1blueclicked.png" type="Texture" id=7]
[ext_resource path="res://f1buttons/f1redclicked.png" type="Texture" id=8]
[ext_resource path="res://track.png" type="Texture" id=9]
[ext_resource path="res://f1buttons/f1orangebutton.png" type="Texture" id=10]
[ext_resource path="res://f1buttons/f1redhover.png" type="Texture" id=11]
[ext_resource path="res://f1buttons/f1bluehover.png" type="Texture" id=12]
[ext_resource path="res://f1buttons/f1orangehover.png" type="Texture" id=13]
[ext_resource path="res://f1buttons/f1purplehover.png" type="Texture" id=14]
[ext_resource path="res://f1buttons/f1yellowhover.png" type="Texture" id=15]
[ext_resource path="res://f1buttons/f1greenclicked.png" type="Texture" id=16]
[ext_resource path="res://f1buttons/f1cyanclicked.png" type="Texture" id=17]
[ext_resource path="res://f1buttons/f1pinkbutton.png" type="Texture" id=18]
[ext_resource path="res://f1buttons/f1purpleclicked.png" type="Texture" id=19]
[ext_resource path="res://f1buttons/f1pinkclicked.png" type="Texture" id=20]
[ext_resource path="res://f1buttons/f1pinkhover.png" type="Texture" id=21]
[ext_resource path="res://f1buttons/f1cyanhover.png" type="Texture" id=22]
[ext_resource path="res://f1buttons/f1purplebutton.png" type="Texture" id=23]
[ext_resource path="res://f1buttons/f1greenbutton.png" type="Texture" id=24]
[ext_resource path="res://f1buttons/f1greenhover.png" type="Texture" id=25]
[ext_resource path="res://f1buttons/f1cyanbutton.png" type="Texture" id=26]
[ext_resource path="res://logo.png" type="Texture" id=27]
[ext_resource path="res://Startscreen.gd" type="Script" id=29]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 29 )

[node name="logo" type="TextureRect" parent="."]
anchor_left = 0.267
anchor_right = 0.267
margin_top = 30.0
margin_right = 466.0
margin_bottom = 130.0
texture = ExtResource( 27 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1000, 600 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 500, 300 )
texture = ExtResource( 9 )

[node name="TextureButtonRed" type="TextureButton" parent="."]
anchor_left = 0.094
anchor_top = 0.292
anchor_right = 0.159
anchor_bottom = 0.55
margin_top = -0.200012
margin_right = -1.52588e-05
margin_bottom = 0.000274658
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 11 )

[node name="TextureButtonOrange" type="TextureButton" parent="."]
anchor_left = 0.344
anchor_top = 0.292
anchor_right = 0.409
anchor_bottom = 0.55
margin_top = -0.200012
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 13 )

[node name="TextureButtonYellow" type="TextureButton" parent="."]
anchor_left = 0.591
anchor_top = 0.292
anchor_right = 0.656
anchor_bottom = 0.55
margin_top = -0.200012
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 15 )

[node name="TextureButtonGreen" type="TextureButton" parent="."]
anchor_left = 0.841
anchor_top = 0.292
anchor_right = 0.906
anchor_bottom = 0.55
margin_top = -0.200012
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 25 )

[node name="TextureButtonCyan" type="TextureButton" parent="."]
anchor_left = 0.094
anchor_top = 0.583
anchor_right = 0.159
anchor_bottom = 0.842
margin_top = 0.200012
margin_right = -1.52588e-05
margin_bottom = -0.200043
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 22 )

[node name="TextureButtonBlue" type="TextureButton" parent="."]
anchor_left = 0.344
anchor_top = 0.583
anchor_right = 0.409
anchor_bottom = 0.842
margin_top = 0.200012
margin_bottom = -0.200043
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 12 )

[node name="TextureButtonPurple" type="TextureButton" parent="."]
anchor_left = 0.591
anchor_top = 0.583
anchor_right = 0.656
anchor_bottom = 0.842
margin_top = 0.200012
margin_bottom = -0.200043
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 14 )

[node name="TextureButtonPink" type="TextureButton" parent="."]
anchor_left = 0.841
anchor_top = 0.583
anchor_right = 0.906
anchor_bottom = 0.842
margin_top = 0.200012
margin_bottom = -0.200043
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 21 )

[connection signal="pressed" from="TextureButtonRed" to="." method="_on_TextureButtonRed_pressed"]
[connection signal="pressed" from="TextureButtonOrange" to="." method="_on_TextureButtonOrange_pressed"]
[connection signal="pressed" from="TextureButtonYellow" to="." method="_on_TextureButtonYellow_pressed"]
[connection signal="pressed" from="TextureButtonGreen" to="." method="_on_TextureButtonGreen_pressed"]
[connection signal="pressed" from="TextureButtonCyan" to="." method="_on_TextureButtonCyan_pressed"]
[connection signal="pressed" from="TextureButtonBlue" to="." method="_on_TextureButtonBlue_pressed"]
[connection signal="pressed" from="TextureButtonPurple" to="." method="_on_TextureButtonPurple_pressed"]
[connection signal="pressed" from="TextureButtonPink" to="." method="_on_TextureButtonPink_pressed"]
